# posefx-studio

./: .architecture.md  .gitignore  AGENTS.md  CLAUDE.md  README.md  notes.md  pyproject.toml  start.sh  updated_effects_prompt.md
.claude/: settings.json  settings.local.json
config/: demo.yaml  jetson.yaml
src/: engine.py  main.py
src/audio/: __init__.py  capture.py
src/inference/: base.py  pose_estimator.py  segmenter.py
src/io/: photo_capture.py  preview.py  recorder.py  video_input.py  webcam.py
src/logic/: gestures.py  triggers.py
src/render/: base.py  compositor.py  debug_renderer.py  utils.py
src/render/effects/: __init__.py  bass_pulse.py  body_glow.py  digital_rain.py  energy_aura.py  fire_skeleton.py  glitch_body.py  halo_wings.py  motion_trails.py  neon_skeleton.py  neon_wireframe.py  particle_dissolve.py  particle_fill.py  passthrough.py  robot_skeleton.py  shadow_clones.py  snowfall_custom.py  sprite_puppet.py
src/services/: replicate_service.py  tv_player.py  youtube.py
src/tracking/: pose_state.py  smoother.py
src/utils/: config.py  geometry.py  network.py  platform.py  qr.py  timing.py
src/web/: server.py
src/web/templates/: index.html
tests/: test_capture_io.py  test_config.py  test_engine.py  test_gallery.py  test_network.py  test_qr.py
tools/: benchmark_pose.py
