[project]
name = "posefx-studio"
version = "0.1.0"
description = "Real-time webcam pipeline for body tracking, gesture detection, and live visual effects"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8",
    "ultralytics>=8.1",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "pyaudio>=0.2.14",
    "scipy>=1.11",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "qrcode[pil]>=7.4.2",
    "yt-dlp>=2024.1",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
