[project]
name = "posefx-studio"
version = "0.1.0"
description = "Real-time webcam pipeline for body tracking, gesture detection, and live visual effects"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8",
    "ultralytics>=8.1",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "pyaudio>=0.2.14",
    "scipy>=1.11",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "qrcode[pil]>=7.4.2",
    "yt-dlp>=2024.1",
    "httpx>=0.27",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[project.scripts]
posefx = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[[tool.uv.index]]
name = "jetson"
url = "https://pypi.jetson-ai-lab.io/jp6/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "jetson" }
torchvision = { index = "jetson" }
torchaudio = { index = "jetson" }
